--- a/public/layout-preview.html
+++ b/public/layout-preview.html
@@ -46,7 +46,7 @@
     align-items: center;
     justify-content: space-between;
     gap: 16px;
-    padding: 12px 16px;
+    padding: 10px 16px;
     background: rgba(0,0,0,0.6);
     backdrop-filter: blur(4px);
     border-bottom: 2px solid rgba(255,255,255,0.1);
@@ -84,7 +84,8 @@
   .stat-bar-bg {
     flex: 1;
     min-width: 40px;
-    height: 10px;
+    height: 14px;
+    border-radius: 2px;
     background: rgba(255,255,255,0.15);
     border: 1px solid rgba(255,255,255,0.3);
     overflow: hidden;
