preview: switch all text sizes to rem units

--- a/public/layout-preview.html
+++ b/public/layout-preview.html
@@ -53,7 +53,7 @@
   }
 
   .day-section {
-    font-size: clamp(0.4rem, 1vw, 0.55rem);
+    font-size: 0.5rem;
     color: #93c5fd;
     white-space: nowrap;
     padding: 1vh 1.2vw;
@@ -75,9 +75,9 @@
     display: flex;
     align-items: center;
     gap: 0.6vw;
-    font-size: clamp(0.4rem, 1vw, 0.55rem);
+    font-size: 0.5rem;
   }
-  .stat-icon { font-size: clamp(0.6rem, 1.5vw, 0.85rem); }
+  .stat-icon { font-size: 0.75rem; }
   .stat-bar-bg {
     flex: 1;
     min-width: 4vw;
@@ -91,13 +91,13 @@
   .bar-espiritu { background: #e879f9; }
   .bar-pulso { background: #facc15; }
   .bar-esencia { background: #34d399; }
-  .stat-val { font-size: clamp(0.35rem, 0.9vw, 0.5rem); color: #aaa; min-width: 2.5vw; text-align: right; }
+  .stat-val { font-size: 0.45rem; color: #aaa; min-width: 2.5vw; text-align: right; }
 
   .fragments {
     display: flex;
     align-items: center;
     gap: 0.5vw;
-    font-size: clamp(0.45rem, 1.1vw, 0.6rem);
+    font-size: 0.55rem;
     color: #93c5fd;
     margin-left: 1vw;
     flex-shrink: 0;
@@ -105,7 +105,7 @@
 
   .config-btn {
     font-family: 'Press Start 2P', cursive;
-    font-size: clamp(0.4rem, 1vw, 0.55rem);
+    font-size: 0.5rem;
     padding: 1vh 1.2vw;
     background: rgba(255,255,255,0.1);
     border: 2px solid rgba(255,255,255,0.3);
@@ -135,15 +135,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: clamp(2.5rem, 8vw, 5rem);
+    font-size: 4rem;
     animation: float 3s ease-in-out infinite;
     background: radial-gradient(circle, rgba(0,200,255,0.1) 0%, transparent 70%);
   }
   .sprite-name {
-    font-size: clamp(0.6rem, 1.5vw, 1rem);
+    font-size: 0.8rem;
     text-shadow: 0 0 10px rgba(0,200,255,0.5);
   }
-  .sprite-edit { font-size: clamp(0.4rem, 1vw, 0.6rem); color: #888; }
+  .sprite-edit { font-size: 0.5rem; color: #888; }
 
   @keyframes float {
     0%, 100% { transform: translateY(0); }
@@ -166,7 +166,7 @@
 
   .action-btn {
     font-family: 'Press Start 2P', cursive;
-    font-size: clamp(0.45rem, 1.2vw, 0.65rem);
+    font-size: 0.6rem;
     padding: 1.5vh 3vw;
     border: 2px solid;
     cursor: pointer;
