preview: small screens show stat numbers instead of bars

--- a/public/layout-preview.html
+++ b/public/layout-preview.html
@@ -181,9 +181,10 @@
   .btn-purificar { background: #3b82f6; border-color: #60a5fa; color: #fff; }
   .btn-conversar { background: #84cc16; border-color: #a3e635; color: #1a1a1a; }
 
-  /* === RESPONSIVE: Portrait phone === */
-  @media (max-width: 480px) and (orientation: portrait) {
-    .stat-val { display: none; }
+  /* === RESPONSIVE: Small screens — show numbers, hide bars === */
+  @media (max-width: 480px) {
+    .stat-bar-bg { display: none; }
+    .stat-val { display: inline; min-width: auto; }
     .fragments { margin-left: 0; }
   }
 
