preview: 4 light theme options (cielo, sakura, aqua, frutero)

--- a/public/redesign-preview.html
+++ b/public/redesign-preview.html
@@ -593,6 +593,232 @@
   body.light .label { color: #8b8370; }
   body.light .note { color: #8b8370; }
   body.light .fracture-line { background: rgba(184,134,11,0.12); box-shadow: 0 0 6px rgba(184,134,11,0.1); }
+
+  /* ===== LIGHT A: CIELO — Bright sky blue + warm whites ===== */
+  body.light-a {
+    background: #eef4fb; color: #1a2a3a;
+    --load-bg: #e8f0fa;
+    --load-glow: radial-gradient(ellipse at 50% 30%, rgba(59,130,246,0.06) 0%, transparent 70%);
+    --star-color: #3b82f6;
+    --logo-color: #2563eb;
+    --logo-shadow: 0 0 15px rgba(37,99,235,0.25), 0 2px 0 #1d4ed8;
+    --text-primary: #1a2a3a;
+    --text-secondary: #4a5a6a;
+    --text-muted: #7a8a9a;
+    --text-dim: #b0bec5;
+    --bar-bg: #d0dff0;
+    --bar-border: #a0b8d0;
+    --bar-fill: linear-gradient(90deg, #3b82f6, #60a5fa);
+    --title-bg: #e8f0fa;
+    --title-glow: radial-gradient(ellipse at 50% 80%, rgba(59,130,246,0.06) 0%, transparent 50%);
+    --title-vignette: radial-gradient(ellipse at center, transparent 60%, rgba(200,215,235,0.4) 100%);
+    --title-text-shadow: 0 0 20px rgba(37,99,235,0.2), 0 2px 0 #1d4ed8;
+    --divider-gradient: linear-gradient(90deg, transparent, #3b82f6, transparent);
+    --creation-bg: #e8f0fa;
+    --creation-glow: radial-gradient(ellipse at 50% 70%, rgba(59,130,246,0.04) 0%, transparent 60%);
+    --card-bg: rgba(59,130,246,0.04);
+    --card-border: rgba(59,130,246,0.1);
+    --card-selected-bg: rgba(59,130,246,0.08);
+    --card-selected-shadow: 0 0 20px rgba(59,130,246,0.12);
+    --card-hover: rgba(59,130,246,0.06);
+    --input-bg: #fff;
+    --input-border: rgba(59,130,246,0.15);
+    --btn-primary-bg: #2563eb;
+    --btn-primary-text: #ffffff;
+    --game-sky: linear-gradient(180deg, #87ceeb 0%, #b0d4f1 40%, #e8f0fa 100%);
+    --game-ground: linear-gradient(180deg, #c5d8e8, #a8c0d8);
+    --hud-gradient: linear-gradient(180deg, rgba(232,240,250,0.85) 0%, transparent 100%);
+    --glass-bg: rgba(255,255,255,0.6);
+    --glass-border: rgba(59,130,246,0.12);
+    --bottom-gradient: linear-gradient(0deg, rgba(232,240,250,0.9) 0%, transparent 100%);
+    --stat-bar-bg: rgba(59,130,246,0.08);
+    --stat-bar-border: rgba(59,130,246,0.05);
+    --chat-bg: #eef4fb;
+    --chat-header-bg: rgba(59,130,246,0.04);
+    --chat-border: rgba(59,130,246,0.08);
+    --chat-input-area-bg: rgba(59,130,246,0.02);
+    --bubble-bot-bg: rgba(59,130,246,0.08);
+    --bubble-bot-border: rgba(59,130,246,0.15);
+    --bubble-user-bg: rgba(0,0,0,0.03);
+    --bubble-user-border: rgba(0,0,0,0.06);
+  }
+  body.light-a .preview-nav { background: rgba(232,240,250,0.95); border-bottom-color: #a0b8d0; }
+  body.light-a .preview-nav button { background: #d0dff0; color: #7a8a9a; border-color: #a0b8d0; }
+  body.light-a .preview-nav button.active { color: #2563eb; border-color: #2563eb; background: #eef4fb; }
+  body.light-a .phone { border-color: #a0b8d0; box-shadow: 0 0 40px rgba(59,130,246,0.1); }
+  body.light-a .label, body.light-a .note { color: #7a8a9a; }
+  body.light-a .fracture-line { background: rgba(59,130,246,0.12); box-shadow: 0 0 6px rgba(59,130,246,0.1); }
+
+  /* ===== LIGHT B: SAKURA — Pink/lavender pastels ===== */
+  body.light-b {
+    background: #faf0f5; color: #2a1a2a;
+    --load-bg: #f8ecf2;
+    --load-glow: radial-gradient(ellipse at 50% 30%, rgba(219,112,147,0.06) 0%, transparent 70%);
+    --star-color: #db7093;
+    --logo-color: #c2185b;
+    --logo-shadow: 0 0 15px rgba(194,24,91,0.25), 0 2px 0 #9a1548;
+    --text-primary: #2a1a2a;
+    --text-secondary: #5a4a5a;
+    --text-muted: #9a7a9a;
+    --text-dim: #c8b0c8;
+    --bar-bg: #f0d0e0;
+    --bar-border: #d8a8c8;
+    --bar-fill: linear-gradient(90deg, #db7093, #f48fb1);
+    --title-bg: #f8ecf2;
+    --title-glow: radial-gradient(ellipse at 50% 80%, rgba(219,112,147,0.06) 0%, transparent 50%);
+    --title-vignette: radial-gradient(ellipse at center, transparent 60%, rgba(235,210,225,0.4) 100%);
+    --title-text-shadow: 0 0 20px rgba(194,24,91,0.2), 0 2px 0 #9a1548;
+    --divider-gradient: linear-gradient(90deg, transparent, #db7093, transparent);
+    --creation-bg: #f8ecf2;
+    --creation-glow: radial-gradient(ellipse at 50% 70%, rgba(219,112,147,0.04) 0%, transparent 60%);
+    --card-bg: rgba(219,112,147,0.05);
+    --card-border: rgba(219,112,147,0.12);
+    --card-selected-bg: rgba(219,112,147,0.1);
+    --card-selected-shadow: 0 0 20px rgba(219,112,147,0.12);
+    --card-hover: rgba(219,112,147,0.07);
+    --input-bg: #fff;
+    --input-border: rgba(219,112,147,0.15);
+    --btn-primary-bg: #c2185b;
+    --btn-primary-text: #ffffff;
+    --game-sky: linear-gradient(180deg, #f8c8d8 0%, #f0d8e4 40%, #f8ecf2 100%);
+    --game-ground: linear-gradient(180deg, #e8c8d8, #d8b0c8);
+    --hud-gradient: linear-gradient(180deg, rgba(248,236,242,0.85) 0%, transparent 100%);
+    --glass-bg: rgba(255,255,255,0.6);
+    --glass-border: rgba(219,112,147,0.12);
+    --bottom-gradient: linear-gradient(0deg, rgba(248,236,242,0.9) 0%, transparent 100%);
+    --stat-bar-bg: rgba(219,112,147,0.08);
+    --stat-bar-border: rgba(219,112,147,0.05);
+    --chat-bg: #faf0f5;
+    --chat-header-bg: rgba(219,112,147,0.04);
+    --chat-border: rgba(219,112,147,0.08);
+    --chat-input-area-bg: rgba(219,112,147,0.02);
+    --bubble-bot-bg: rgba(219,112,147,0.08);
+    --bubble-bot-border: rgba(219,112,147,0.15);
+    --bubble-user-bg: rgba(0,0,0,0.03);
+    --bubble-user-border: rgba(0,0,0,0.06);
+  }
+  body.light-b .preview-nav { background: rgba(248,236,242,0.95); border-bottom-color: #d8a8c8; }
+  body.light-b .preview-nav button { background: #f0d0e0; color: #9a7a9a; border-color: #d8a8c8; }
+  body.light-b .preview-nav button.active { color: #c2185b; border-color: #c2185b; background: #faf0f5; }
+  body.light-b .phone { border-color: #d8a8c8; box-shadow: 0 0 40px rgba(219,112,147,0.1); }
+  body.light-b .label, body.light-b .note { color: #9a7a9a; }
+  body.light-b .fracture-line { background: rgba(219,112,147,0.12); box-shadow: 0 0 6px rgba(219,112,147,0.1); }
+
+  /* ===== LIGHT C: AQUA — Teal/mint fresh ===== */
+  body.light-c {
+    background: #ecfdf5; color: #0a2a1a;
+    --load-bg: #e6faf0;
+    --load-glow: radial-gradient(ellipse at 50% 30%, rgba(16,185,129,0.06) 0%, transparent 70%);
+    --star-color: #10b981;
+    --logo-color: #059669;
+    --logo-shadow: 0 0 15px rgba(5,150,105,0.25), 0 2px 0 #047857;
+    --text-primary: #0a2a1a;
+    --text-secondary: #2a5a4a;
+    --text-muted: #5a8a7a;
+    --text-dim: #a0c8b8;
+    --bar-bg: #b0e8d0;
+    --bar-border: #80d0b0;
+    --bar-fill: linear-gradient(90deg, #10b981, #34d399);
+    --title-bg: #e6faf0;
+    --title-glow: radial-gradient(ellipse at 50% 80%, rgba(16,185,129,0.06) 0%, transparent 50%);
+    --title-vignette: radial-gradient(ellipse at center, transparent 60%, rgba(200,235,220,0.4) 100%);
+    --title-text-shadow: 0 0 20px rgba(5,150,105,0.2), 0 2px 0 #047857;
+    --divider-gradient: linear-gradient(90deg, transparent, #10b981, transparent);
+    --creation-bg: #e6faf0;
+    --creation-glow: radial-gradient(ellipse at 50% 70%, rgba(16,185,129,0.04) 0%, transparent 60%);
+    --card-bg: rgba(16,185,129,0.04);
+    --card-border: rgba(16,185,129,0.1);
+    --card-selected-bg: rgba(16,185,129,0.08);
+    --card-selected-shadow: 0 0 20px rgba(16,185,129,0.12);
+    --card-hover: rgba(16,185,129,0.06);
+    --input-bg: #fff;
+    --input-border: rgba(16,185,129,0.15);
+    --btn-primary-bg: #059669;
+    --btn-primary-text: #ffffff;
+    --game-sky: linear-gradient(180deg, #a0e8d0 0%, #c0f0e0 40%, #e6faf0 100%);
+    --game-ground: linear-gradient(180deg, #b0d8c8, #90c0b0);
+    --hud-gradient: linear-gradient(180deg, rgba(230,250,240,0.85) 0%, transparent 100%);
+    --glass-bg: rgba(255,255,255,0.6);
+    --glass-border: rgba(16,185,129,0.12);
+    --bottom-gradient: linear-gradient(0deg, rgba(230,250,240,0.9) 0%, transparent 100%);
+    --stat-bar-bg: rgba(16,185,129,0.08);
+    --stat-bar-border: rgba(16,185,129,0.05);
+    --chat-bg: #ecfdf5;
+    --chat-header-bg: rgba(16,185,129,0.04);
+    --chat-border: rgba(16,185,129,0.08);
+    --chat-input-area-bg: rgba(16,185,129,0.02);
+    --bubble-bot-bg: rgba(16,185,129,0.08);
+    --bubble-bot-border: rgba(16,185,129,0.15);
+    --bubble-user-bg: rgba(0,0,0,0.03);
+    --bubble-user-border: rgba(0,0,0,0.06);
+  }
+  body.light-c .preview-nav { background: rgba(230,250,240,0.95); border-bottom-color: #80d0b0; }
+  body.light-c .preview-nav button { background: #b0e8d0; color: #5a8a7a; border-color: #80d0b0; }
+  body.light-c .preview-nav button.active { color: #059669; border-color: #059669; background: #ecfdf5; }
+  body.light-c .phone { border-color: #80d0b0; box-shadow: 0 0 40px rgba(16,185,129,0.1); }
+  body.light-c .label, body.light-c .note { color: #5a8a7a; }
+  body.light-c .fracture-line { background: rgba(16,185,129,0.12); box-shadow: 0 0 6px rgba(16,185,129,0.1); }
+
+  /* ===== LIGHT D: FRUTERO — Warm orange/mango vibrant ===== */
+  body.light-d {
+    background: #fffbf5; color: #383838;
+    --load-bg: #fff8f0;
+    --load-glow: radial-gradient(ellipse at 50% 30%, rgba(255,149,0,0.06) 0%, transparent 70%);
+    --star-color: #ff9500;
+    --logo-color: #e88600;
+    --logo-shadow: 0 0 15px rgba(255,149,0,0.3), 0 2px 0 #cc7a00;
+    --text-primary: #383838;
+    --text-secondary: #5a5a5a;
+    --text-muted: #8a8070;
+    --text-dim: #c0b8a8;
+    --bar-bg: #ffe8c8;
+    --bar-border: #f0c888;
+    --bar-fill: linear-gradient(90deg, #ff9500, #ffb040);
+    --title-bg: #fff8f0;
+    --title-glow: radial-gradient(ellipse at 50% 80%, rgba(255,149,0,0.08) 0%, transparent 50%);
+    --title-vignette: radial-gradient(ellipse at center, transparent 60%, rgba(255,240,220,0.4) 100%);
+    --title-text-shadow: 0 0 20px rgba(255,149,0,0.25), 0 2px 0 #cc7a00;
+    --divider-gradient: linear-gradient(90deg, transparent, #ff9500, transparent);
+    --creation-bg: #fff8f0;
+    --creation-glow: radial-gradient(ellipse at 50% 70%, rgba(255,149,0,0.05) 0%, transparent 60%);
+    --card-bg: rgba(255,149,0,0.04);
+    --card-border: rgba(255,149,0,0.12);
+    --card-selected-bg: rgba(255,149,0,0.08);
+    --card-selected-shadow: 0 0 20px rgba(255,149,0,0.15);
+    --card-hover: rgba(255,149,0,0.06);
+    --input-bg: #fff;
+    --input-border: rgba(255,149,0,0.18);
+    --btn-primary-bg: #ff9500;
+    --btn-primary-text: #ffffff;
+    --game-sky: linear-gradient(180deg, #ffe0a0 0%, #fff0d0 40%, #fffbf5 100%);
+    --game-ground: linear-gradient(180deg, #f0d8b0, #e0c898);
+    --hud-gradient: linear-gradient(180deg, rgba(255,248,240,0.85) 0%, transparent 100%);
+    --glass-bg: rgba(255,255,255,0.6);
+    --glass-border: rgba(255,149,0,0.12);
+    --bottom-gradient: linear-gradient(0deg, rgba(255,248,240,0.9) 0%, transparent 100%);
+    --stat-bar-bg: rgba(255,149,0,0.08);
+    --stat-bar-border: rgba(255,149,0,0.05);
+    --chat-bg: #fffbf5;
+    --chat-header-bg: rgba(255,149,0,0.04);
+    --chat-border: rgba(255,149,0,0.1);
+    --chat-input-area-bg: rgba(255,149,0,0.02);
+    --bubble-bot-bg: rgba(255,149,0,0.08);
+    --bubble-bot-border: rgba(255,149,0,0.18);
+    --bubble-user-bg: rgba(0,0,0,0.03);
+    --bubble-user-border: rgba(0,0,0,0.06);
+  }
+  body.light-d .preview-nav { background: rgba(255,248,240,0.95); border-bottom-color: #f0c888; }
+  body.light-d .preview-nav button { background: #ffe8c8; color: #8a8070; border-color: #f0c888; }
+  body.light-d .preview-nav button.active { color: #e88600; border-color: #e88600; background: #fffbf5; }
+  body.light-d .phone { border-color: #f0c888; box-shadow: 0 0 40px rgba(255,149,0,0.1); }
+  body.light-d .label, body.light-d .note { color: #8a8070; }
+  body.light-d .fracture-line { background: rgba(255,149,0,0.15); box-shadow: 0 0 6px rgba(255,149,0,0.12); }
+
+  /* Shared light overrides for A/B/C/D */
+  body.light-a .theme-toggle, body.light-b .theme-toggle,
+  body.light-c .theme-toggle, body.light-d .theme-toggle {
+    background: var(--btn-primary-bg); color: var(--btn-primary-text); border-color: var(--btn-primary-bg);
+  }
 </style>
 </head>
 <body>
@@ -604,7 +830,11 @@
   <button onclick="show('game-mobile')">Game</button>
   <button onclick="show('chat')">Chat</button>
   <button onclick="show('leaderboard')">Leaderboard</button>
-  <button class="theme-toggle" onclick="toggleTheme()">🌓 Toggle Theme</button>
+  <button class="theme-toggle" onclick="setTheme('dark')">🌑 Dark</button>
+  <button class="theme-toggle" onclick="setTheme('light-a')">☀️ A: Cielo</button>
+  <button class="theme-toggle" onclick="setTheme('light-b')">🌸 B: Sakura</button>
+  <button class="theme-toggle" onclick="setTheme('light-c')">🌊 C: Aqua</button>
+  <button class="theme-toggle" onclick="setTheme('light-d')">🍊 D: Frutero</button>
 </div>
 
 <div class="screens">
@@ -833,8 +1063,8 @@ function show(id) {
   document.getElementById('s-' + id).classList.add('active');
   event.target.classList.add('active');
 }
-function toggleTheme() {
-  document.body.classList.toggle('light');
+function setTheme(t) {
+  document.body.className = t === 'dark' ? '' : t;
 }
 </script>
 
