--- a/public/redesign-preview.html
+++ b/public/redesign-preview.html
@@ -9,7 +9,7 @@
   * { margin: 0; padding: 0; box-sizing: border-box; }
   body {
     font-family: 'Press Start 2P', monospace;
-    background: #0a0a12;
+    background: #000000;
     color: #e8e8e8;
     image-rendering: pixelated;
     overflow-x: hidden;
