fix: force black bg on all themes (only phone frame changes)

--- a/public/redesign-preview.html
+++ b/public/redesign-preview.html
@@ -7,9 +7,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 <style>
   * { margin: 0; padding: 0; box-sizing: border-box; }
-  body {
+  body, body.light, body.light-a, body.light-b, body.light-c, body.light-d {
     font-family: 'Press Start 2P', monospace;
-    background: #000000;
+    background: #000000 !important;
     color: #e8e8e8;
     image-rendering: pixelated;
     overflow-x: hidden;
