fix: breakpoints — 640/641/1025 per project spec

--- a/public/redesign-v4.html
+++ b/public/redesign-v4.html
@@ -1051,8 +1051,8 @@ body.light .transition-energy-ring {
 .transition-text { font-size: var(--fs-base); }
 .transition-sprite { font-size: 60px; }
 
-/* --- Tablet (640px+) --- */
-@media (min-width: 640px) {
+/* --- Medium Devices / Tablets (641px+) --- */
+@media (min-width: 641px) {
   .preview-nav { padding: 8px 12px; gap: 4px; }
   .preview-nav button { font-size: var(--fs-xs); padding: 6px 10px; }
 
@@ -1085,8 +1085,8 @@ body.light .transition-energy-ring {
   .transition-sprite { font-size: 80px; }
 }
 
-/* --- Desktop (1024px+) --- */
-@media (min-width: 1024px) {
+/* --- Large Devices / Desktops (1025px+) --- */
+@media (min-width: 1025px) {
   .loading-logo { font-size: 28px; }
   .loading-bar-container { width: 320px; }
   .title-main { font-size: 36px; }
